kubernetes/apps/infrastructure/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  ingressClassName: nginx
  rules:
    - host: "prod.tlscert.dev"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
